fix(Label): Label text input shifts whole UI down

--- a/src/assets/wise5/components/label/label-student/label-student.component.scss
+++ b/src/assets/wise5/components/label/label-student/label-student.component.scss
@@ -1,7 +1,7 @@
 $margin-spacing: 20px;
 
 .input-wrapper {
-  min-height: 60px;
+  min-height: 80px;
   max-width: 800px;
 }
 
@@ -35,7 +35,6 @@ $margin-spacing: 20px;
 }
 
 .label-canvas-container {
-  margin-top: 10px;
   margin-bottom: $margin-spacing;
 }
 
